--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -106,3 +106,13 @@
   color: #fff;
 
 }
+
+
+@media screen and (max-width: 600px) {
+  #header-todos-links {
+
+    display: flex;
+    flex-direction: column;
+
+  }
+}
