--- a/src/pages/Album.css
+++ b/src/pages/Album.css
@@ -64,3 +64,26 @@
   margin-bottom: 15px;
 }
 
+@media screen and (max-width: 600px) {
+  #body-page-album {
+    flex-direction: column;
+  }
+
+  #div-musics {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #div-music{
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+    margin: 15px;
+    border: 1px black solid;
+    border-radius: 10px;
+  }
+
+}
