--- a/src/pages/Album.css
+++ b/src/pages/Album.css
@@ -70,6 +70,11 @@
     align-items: center;
   }
 
+  #div-album{
+    margin: 0;
+  }
+  
+
   #div-musics {
     display: flex;
     flex-direction: column;
