--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -56,3 +56,13 @@
   width: 100px;
   height: 30px;
 }
+
+
+@media screen and (max-width: 600px) {
+  #body-profile-page{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+}
