--- a/src/pages/Album.css
+++ b/src/pages/Album.css
@@ -98,4 +98,11 @@
     margin: 10px;
   }
 
+  #div-textos{
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
 }
