--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -113,6 +113,13 @@
 
     display: flex;
     flex-direction: column;
+    background-color: #f0f2f5;
+    height: 200px;
 
   }
+  #search{
+
+  }
+
+
 }
